--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,24 @@
-<h1>All Cocktails</h1>
-<ul>
-  <% @cocktails.each do |cocktail| %>
-  <li>
-    <%= cocktail.name %>
-    <%= link_to "Detail", cocktail_path(cocktail), class: "btn btn-primary"%>
-  </li>
-  <% end %>
-</ul>
-<%= link_to "Add", new_cocktail_path, class: "btn btn-primary"%>
+
+
+
+<div class="div" class="background">
+  <div class="container" >
+    <h1>Cocktail list</h1>
+    <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary"%>
+
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
+                <div class="card-description">
+                  <h2><%= cocktail.name %></h2>
+                </div>
+                <%= link_to "", cocktail_path(cocktail), class: 'card-link' %>
+              </div>
+            </div>
+          <% end %>
+    </div>
+  </div>
+
+</div>
+
