--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,13 +3,13 @@
 
 <div class="div" class="background">
   <div class="container" >
-    <h1>Cocktail list</h1>
+    <h1>MISTER COCKTAIL</h1>
     <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary"%>
 
     <div class="row">
       <% @cocktails.each do |cocktail| %>
             <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
+              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%=  cl_image_path cocktail.photo %>');">
                 <div class="card-description">
                   <h2><%= cocktail.name %></h2>
                 </div>
