--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,19 +1,26 @@
-<h1>Cocktailss#new</h1>
+<div class="container" >
 
-<%= simple_form_for @cocktail do |f| %>
+  <h1>New Cocktail</h1>
 
-  <% if @cocktail.errors.any? %>
-    <div class="errors-container">
-      <ul>
-        <% @cocktail.errors.full_messages.each do |message| %>
-          <li class='bg-danger'><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+
+  <%= simple_form_for @cocktail do |f| %>
+
+    <% if @cocktail.errors.any? %>
+      <div class="errors-container">
+        <ul>
+          <% @cocktail.errors.full_messages.each do |message| %>
+            <li class='bg-danger'><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <%= f.input :name %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
+
+    <%= f.submit "add the cocktail", class: "btn btn-primary" %>
+    <%= link_to "back to cocktails", cocktails_path, class: "btn btn-secondary"%>
+
   <% end %>
-
-  <%= f.input :name %>
-  <%= f.submit "add a cocktail", class: "btn btn-primary" %>
-  <%= link_to "back to list", cocktails_path, class: "btn btn-primary"%>
-
-<% end %>
+</div>
