--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,10 +1,16 @@
 
 
+<div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%=  cl_image_path @cocktail.photo %>');">
+                <div class="card-description">
+                  <h2><%= @cocktail.name %></h2>
+                </div>
+                <%= link_to "", cocktail_path(@cocktail), class: 'card-link' %>
+</div>
 
-<h1>Ingredients pour <%= @cocktail.name %></h1>
+<h1>Ingredients</h1>
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.association :ingredient %>
   <%= f.input :description %>
   <%= f.submit "add the ingredient", class: "btn btn-primary" %>
-  <%= link_to "back to cocktail", cocktail_path(@cocktail), class: "btn btn-primary"%>
+  <%= link_to "back to the cocktail", cocktail_path(@cocktail), class: "btn btn-secondary"%>
 <% end %>
