--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,11 @@
 
 <div class="div" class="background">
   <div class="container" >
-    <h1>MISTER COCKTAIL</h1>
+
+    <p>
+      <span id="banner-typed-text"></span>
+       <h1>MISTER COCKTAIL</h1>
+    </p>
     <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary"%>
 
     <div class="row">
