--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -20,7 +20,7 @@
     <%= f.input :photo_cache, as: :hidden %>
 
     <%= f.submit "add the cocktail", class: "btn btn-primary" %>
-    <%= link_to "back to cocktails", cocktails_path, class: "btn btn-secondary"%>
+    <%= link_to "back to cocktails", root_path, class: "btn btn-secondary"%>
 
   <% end %>
 </div>
