--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,4 +1,14 @@
-.background{
+.back{
 background-image: asset-url('cocktails.jpg');
 background-size: cover ;
+height: 100vh;
 }
+
+.titre{
+
+color:#434343;
+font-size:50px;
+
+}
+
+
