--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,12 +1,13 @@
 
 
 
-<div class="div" class="background">
-  <div class="container" >
+<div class="div" >
+  <div class="container" class="back" >
 
     <p>
-      <span id="banner-typed-text"></span>
-       <h1>MISTER COCKTAIL</h1>
+      <h1>MISTER COCKTAIL</h1>
+      <span id="banner-typed-text" class ="titre"></span>
+
     </p>
     <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary"%>
 
